@@ -1,6 +1,6 @@
-/* Copyright (C) 2002-2014 Free Software Foundation, Inc.
+/* Elided version of pthread_mutex_destroy.
+   Copyright (C) 2014 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
-   Contributed by Ulrich Drepper <drepper@redhat.com>, 2002.
 
    The GNU C Library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
@@ -16,30 +16,7 @@
    License along with the GNU C Library; if not, see
    <http://www.gnu.org/licenses/>.  */
 
-#include <errno.h>
-#include "pthreadP.h"
+#include <elision-conf.h>
+#include "force-elision.h"
 
-#include <stap-probe.h>
-
-#ifndef DO_ELISION
-# define DO_ELISION(m) 0
-#endif
-
-int
-__pthread_mutex_destroy (mutex)
-     pthread_mutex_t *mutex;
-{
-  LIBC_PROBE (mutex_destroy, 1, mutex);
-
-  if (!DO_ELISION (mutex)
-      && (mutex->__data.__kind & PTHREAD_MUTEX_ROBUST_NORMAL_NP) == 0
-      && mutex->__data.__nusers != 0)
-    return EBUSY;
-
-  /* Set to an invalid value.  */
-  mutex->__data.__kind = -1;
-
-  return 0;
-}
-strong_alias (__pthread_mutex_destroy, pthread_mutex_destroy)
-hidden_def (__pthread_mutex_destroy)
+#include "nptl/pthread_mutex_destroy.c"
